<resources>
    <string name="app_name">Assignment4</string>
    <string name="calc_0">0</string>
    <string name="calc_1">1</string>
    <string name="calc_2">2</string>
    <string name="calc_3">3</string>
    <string name="calc_4">4</string>
    <string name="calc_5">5</string>
    <string name="calc_6">6</string>
    <string name="calc_7">7</string>
    <string name="calc_8">8</string>
    <string name="calc_9">9</string>
    <string name="calc_mc">MC</string>
    <string name="calc_mr">MR</string>
    <string name="calc_m_plus">M+</string>
    <string name="calc_m_minus">M-</string>
    <string name="calc_ms">MS</string>
    <string name="calc_m_drop">M∨</string>
    <string name="calc_percent">%</string>
    <string name="calc_ce">CE</string>
    <string name="calc_c">C</string>
    <string name="calc_backspace">⌫</string>
    <string name="calc_reciprocal">¹/x</string>
    <string name="calc_square">x²</string>
    <string name="calc_sqrt">²/√x</string>
    <string name="calc_divide">÷</string>
    <string name="calc_multiply">×</string>
    <string name="calc_minus">-</string>
    <string name="calc_plus">+</string>
    <string name="calc_plus_minus">+/-</string>
    <string name="calc_dot">.</string>
    <string name="calc_equal">=</string>
    <string name="error_text">Error</string>
</resources>
