<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/calc_bg"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="272dp"
        android:layout_weight="1"
        android:gravity="bottom|end"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvFormula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="64sp"
            android:textStyle="bold"
            tools:text="0" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_ce"
                style="@style/ButtonStyle.Action"
                android:text="@string/calc_ce" />
            <Button
                android:id="@+id/btn_c"
                style="@style/ButtonStyle.Action"
                android:text="@string/calc_c" />
            <Button
                android:id="@+id/btn_backspace"
                style="@style/ButtonStyle.Action"
                android:text="@string/calc_backspace" />
            <Button
                android:id="@+id/btn_divide"
                style="@style/ButtonStyle.Operator"
                android:text="@string/calc_divide" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_7"
                style="@style/ButtonStyle.Number"
                android:text="@string/calc_7" />
            <Button
                android:id="@+id/btn_8"
                style="@style/ButtonStyle.Number"
                android:text="@string/calc_8" />
            <Button
                android:id="@+id/btn_9"
                style="@style/ButtonStyle.Number"
                android:text="@string/calc_9" />
            <Button
                android:id="@+id/btn_multiply"
                style="@style/ButtonStyle.Operator"
                android:text="@string/calc_multiply" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_4"
                style="@style/ButtonStyle.Number"
                android:text="@string/calc_4" />
            <Button
                android:id="@+id/btn_5"
                style="@style/ButtonStyle.Number"
                android:text="@string/calc_5" />
            <Button
                android:id="@+id/btn_6"
                style="@style/ButtonStyle.Number"
                android:text="@string/calc_6" />
            <Button
                android:id="@+id/btn_minus"
                style="@style/ButtonStyle.Operator"
                android:text="@string/calc_minus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_1"
                style="@style/ButtonStyle.Number"
                android:text="@string/calc_1" />
            <Button
                android:id="@+id/btn_2"
                style="@style/ButtonStyle.Number"
                android:text="@string/calc_2" />
            <Button
                android:id="@+id/btn_3"
                style="@style/ButtonStyle.Number"
                android:text="@string/calc_3" />
            <Button
                android:id="@+id/btn_plus"
                style="@style/ButtonStyle.Operator"
                android:text="@string/calc_plus" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_plus_minus"
                style="@style/ButtonStyle.Number"
                android:text="@string/calc_plus_minus" />
            <Button
                android:id="@+id/btn_0"
                style="@style/ButtonStyle.Number"
                android:text="@string/calc_0" />
            <Button
                android:id="@+id/btn_dot"
                style="@style/ButtonStyle.Number"
                android:text="@string/calc_dot" />
            <Button
                android:id="@+id/btn_equal"
                style="@style/ButtonStyle.Equal"
                android:text="@string/calc_equal" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
